k8s/minio/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: bulletin
  labels:
    app: minio

spec:
  replicas: 1

  selector:
    matchLabels:
      app: minio

  template:
    metadata:
      labels:
        app: minio

    spec:
      containers:
        - name: minio

          image: minio/minio:RELEASE.2025-09-07T16-13-09Z
          imagePullPolicy: IfNotPresent

          args:
            - server
            - /data
            - --console-address
            - ":9001"


          ports:
            - containerPort: 9000
              name: api

            - containerPort: 9001
              name: console

          volumeMounts:
            - name: minio-storage
              mountPath: /data

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

          securityContext:
#            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL

      volumes:
        - name: minio-storage
          persistentVolumeClaim:
            claimName: minio-pvc
