k8s/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: bulletin
spec:
  selector:
    app: minio
  ports:
    - name: minio-api
      port: 9000
      targetPort: 9000

    - name: minio-console
      port: 9001
      targetPort: 9001
